--- a/SqlIntro/App - Copy.config
+++ b/SqlIntro/App - Copy.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+ <connectionStrings>
+   <add name="Default" connecitonstring="Server=localhost;Database=AdventureWorks;Uid=username;Pwd=password;"/>
+ </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
